RESOLVED FIXED118982
PlugIn content can disappear after restarting
https://bugs.webkit.org/show_bug.cgi?id=118982
Summary PlugIn content can disappear after restarting
Dean Jackson
Reported 2013-07-22 13:31:01 PDT
Composited plugins can be removed from the document after they have been snapshotted and restarted.
Attachments
Patch (2.12 KB, patch)
2013-07-22 13:47 PDT, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2013-07-22 13:32:19 PDT
What happens is that the compositing layer for the plugin is removed because it wasn't property inserted into the tree. It happens most often when another part of the tree triggers a compositing update. Generally a larger style recalculation is enough to display the content again.
Dean Jackson
Comment 2 2013-07-22 13:47:46 PDT
Dean Jackson
Comment 3 2013-07-22 13:53:54 PDT
Note You need to log in before you can comment on or make changes to this bug.