PlugIn content can disappear after restarting https://bugs.webkit.org/show_bug.cgi?id=118982

Reviewed by Simon Fraser.

When a snapshotted plug-in is restarted, we inserted its compositing
layer back into the tree, but didn't recalculate style. This meant
that a subsequent compositing tree operation (such as any hardware
animation) could cause the content to disappear.

* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::setDisplayState): Force a style recalc.
(WebCore::HTMLPlugInImageElement::removeSnapshotTimerFired): Ditto.

Canonical link: https://commits.webkit.org/136819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152989 268f45cc-cd09-0410-ab3c-d52691b4dbfc